--- a/apache-config-example.conf
+++ b/apache-config-example.conf
@@ -2,17 +2,17 @@
 # Fichier: /etc/apache2/sites-available/ayki.votre-domaine.com.conf
 
 <VirtualHost *:80>
-    ServerName ayki.votre-domaine.com
+    ServerName ayki.ptrniger.com
     RewriteEngine On
     RewriteRule ^ https://%{SERVER_NAME}%{REQUEST_URI} [END,NE,R=permanent]
 </VirtualHost>
 
 <VirtualHost *:443>
-    ServerName ayki.votre-domaine.com
+    ServerName ayki.ptrniger.com
 
     SSLEngine on
-    SSLCertificateFile    /etc/letsencrypt/live/votre-domaine.com/fullchain.pem
-    SSLCertificateKeyFile /etc/letsencrypt/live/votre-domaine.com/privkey.pem
+    SSLCertificateFile    /etc/letsencrypt/live/ptrniger.com/fullchain.pem
+    SSLCertificateKeyFile /etc/letsencrypt/live/ptrniger.com/privkey.pem
     Include               /etc/letsencrypt/options-ssl-apache.conf
 
     ProxyPreserveHost On
@@ -82,7 +82,7 @@
 # Décommentez cette section et commentez la section DocumentRoot ci-dessus
 
 # <VirtualHost *:443>
-#     ServerName ayki.votre-domaine.com
+#     ServerName ayki.ptrniger.com
 #     
 #     SSLEngine on
 #     SSLCertificateFile    /etc/letsencrypt/live/votre-domaine.com/fullchain.pem
